# bf

./: .gitignore  Cargo.toml  build.sh  package-lock.json
.wrangler/cache/: pages.json  wrangler-account.json
breakfast/: .gitignore  Cargo.toml  README.md
breakfast/brainfuck-transpiler/: .gitignore  .npmrc  README.md  build.sh  middleware.ts  next.config.mjs  package.json  pnpm-lock.yaml  types.d.ts  vercel.json
breakfast/brainfuck-transpiler/app/: layout.tsx  page.tsx
breakfast/brainfuck-transpiler/components/: stripe.tsx
breakfast/brainfuck-transpiler/components/ui/: toast.tsx
breakfast/brainfuck-transpiler/lib/: wasm-loader.ts
breakfast/brainfuck-transpiler/lib/wasm/: breakfast.d.ts  breakfast_bg.js  breakfast_bg.wasm  breakfast_bg.wasm.d.ts  package.json
breakfast/brainfuck-transpiler/public/wasm/: .gitkeep  breakfast.js  breakfast_bg.wasm
breakfast/src/: main.rs  preface.c
frontend/: Cargo.toml  index.html  styles.css
frontend/src/: lib.rs
site/: _headers  app.js  index.html  style.css
site/wasm/: bf.d.ts  bf.js  bf_bg.wasm
src/: bf_exec  lib.rs  main.rs
