[package]
name = "bf-frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sycamore = "0.9"
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
gloo-timers = { version = "0.3", features = ["futures"] }
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlTextAreaElement",
    "HtmlInputElement",
    "Element",
    "Event",
    "EventTarget",
    "console",
    "Clipboard",
    "Navigator",
    "Response",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Location",
] }

[profile.release]
opt-level = "z"
lto = true